Issue #23026: winreg.QueryValueEx() now return an integer for REG_QWORD type. (Patch by hakril)